--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
     border: 0;
 }
 
-body {
+.main {
     padding: 20px 20px 0px 20px;
     gap: 20px;
     background: #FAFAFA;
@@ -134,7 +134,7 @@ body {
 .overlay {
     background: rgba(0, 0, 0, 0.20);
     backdrop-filter: blur(2.5px);
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     z-index: 99;
