--- a/index.css
+++ b/index.css
@@ -5,11 +5,12 @@
     border: 0;
 }
 
-.main {
+main {
     padding: 20px 20px 0px 20px;
     gap: 20px;
     background: #FAFAFA;
     position: relative;
+    min-height: 100vh;
 }
 
 .add-button {
@@ -131,6 +132,11 @@
     text-decoration-line: line-through;
 }
 
+.job.dragging {
+    opacity: 0.5;
+}
+
+/* overlay for Modals */
 .overlay {
     background: rgba(0, 0, 0, 0.20);
     backdrop-filter: blur(2.5px);
@@ -142,6 +148,12 @@
 }
 
 /* Modal */
+
+.modal_ {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .modal_ .main {
     display: flex;
@@ -155,7 +167,6 @@
 
     z-index: 100;
     position: absolute;
-    left: 420px;
     top: 80px;
 
     border-radius: 20px;
